added post doc research

--- a/cv.tex
+++ b/cv.tex
@@ -169,7 +169,16 @@
 \vspace{0.05in}
 
 \subsection*{Post-Doctoral Research}
-pass
+My post-doctoral research has focused on the design of novel inertial
+confinement fusion targets and on designing high energy density physics
+experiments.  I developed a shock ignition target compatible with ``day one''
+NIF hardware as well as developed a direct drive heavy ion driven ignition
+target that makes use of a long range heavy ion deposition and tamped ablation
+to achive high drive efficiency.  Additional work has expended into the design
+of laser driven hydrodynamics experiments intended to test the physics of the
+ion driven X-target, the modeling of a high energy backlighter for NIF, and
+experiments measuring the dynamic response of BCC metals to shocks.
+
 
 \subsection*{Ph.D. Research}
 My Ph.D. research studied the effect of different charged particle stopping
