i have a phdgit --git-dir=/Users/terry10/doc/cv/.git hash-object -w --stdin > /var/folders/5l/5lCGVOCBH3ablFTpd79AvE++6T2/-Tmp-/voIT7ip/36

--- a/cv.tex
+++ b/cv.tex
@@ -103,7 +103,7 @@
 \begin{itemize}
 	\item 
 		\textbf{University of Wisconsin-Madison} \\
-		Ph.D. Nuclear Engineering (Est 2010) \\
+		Ph.D. Nuclear Engineering \\
   		Thesis: Effect of Different Charged Particle Stopping Power Models on ICF Ignition \\
 		Advisor: Gregory A. Moses
 	\item 
