update software development

--- a/cv.tex
+++ b/cv.tex
@@ -209,6 +209,13 @@ In my own research, I have derived and implemented Fermi-degenerate extensions o
 
 
 \subsection*{Software Development}
+Over the course of my research, I have developed a significant amount of
+scientific software.  I am a skilled Python developer, with 8 years of
+experience with NumPy, SciPy, Matplotlib, Cython, PyTables, etc.  I am
+proficient in Fortran, C, and C++ and have experience working in parallel
+environments.  I am a vim, git, and \LaTeX user and am at home with the
+command-line.
+
 The computing aspect of my Ph.D. research required the integration of a library
 written in C++ (Deeks) with an existing Fortran program (Bucky).  Data analysis
 in compiled languages is overly time intensive, so I developed Python
