--- a/cv.tex
+++ b/cv.tex
@@ -237,7 +237,7 @@ once took a week, can now be accomplished in hours.
 
 \pagebreak
 
-\section*{Techincal Leadership}
+\section*{Technical Leadership}
 \hrule
 \vspace{0.05in}
 
