--- a/cv.tex
+++ b/cv.tex
@@ -240,6 +240,16 @@ once took a week, can now be accomplished in hours.
 \section*{Technical Leadership}
 \hrule
 \vspace{0.05in}
+\subsection*{Propsal Writing}
+I am the LLNL Primary Investigator for a 3-year, \$6M proposal the US DoE
+Office of Science to.  The proposal seeks funding to  experimentally investigate
+the physics of shock reflection and the evolution of the Kelvin-Hemholtz
+instability in conditions relevant to an ion driven fusion energy target
+design.  If funded, I would be responsible for directing as \$1.1M in funds
+over three years and managing a group of senior research scientists.  The
+proposal is in collaboration with scientists at Lawrence Berkeley National
+Laboratory, Lawrence Livermore National Laboratory, and the Princeton Plasma
+Physics Laboratory.
 
 \subsection*{Scientific Programming in Python Program Committee}
 The Program Commitee for the Scientific Programming in Python Conference is
