--- a/cv.tex
+++ b/cv.tex
@@ -251,14 +251,14 @@ proposal is in collaboration with scientists at Lawrence Berkeley National
 Laboratory, Lawrence Livermore National Laboratory, and the Princeton Plasma
 Physics Laboratory.
 
-\subsection*{Scientific Programming in Python Program Committee}
-The Program Commitee for the Scientific Programming in Python Conference is
+\subsection*{Scientific Programming in Python Program Committee 2012-2013}
+The Program Committee for the Scientific Programming in Python Conference is
 responsible for reviewing and selecting talks from submitted proposals.
 Committee is also responsible for reviewing submitted papers submitted to the
 conference proceedings.
 
-\subsection*{The Hacker Within}
-The Hacker Within THW is a student-led, skill sharing interest group for
+\subsection*{The Hacker Within 2008-2011, Software Carpentry 2012-present}
+The Hacker Within (THW) is a student-led, skill sharing interest group for
 scientific software development.  It was founded in 2008 by two colleagues and
 myself.  We hold bi-weekly meetings and hold occasional ``boot camps,'' highly
 focused multi-day workshops.  Our most recent boot camp on the Python
