post-doctoral research

--- a/cv.tex
+++ b/cv.tex
@@ -172,12 +172,29 @@
 My post-doctoral research has focused on the design of novel inertial
 confinement fusion targets and on designing high energy density physics
 experiments.  I developed a shock ignition target compatible with ``day one''
-NIF hardware as well as developed a direct drive heavy ion driven ignition
-target that makes use of a long range heavy ion deposition and tamped ablation
-to achive high drive efficiency.  Additional work has expended into the design
-of laser driven hydrodynamics experiments intended to test the physics of the
-ion driven X-target, the modeling of a high energy backlighter for NIF, and
-experiments measuring the dynamic response of BCC metals to shocks.
+hardware on the recently completed National Ignition Facility (NIF) in
+Livermore, CA.
+
+I developed a direct drive heavy ion driven ignition target that makes use of a
+long range heavy ion deposition and tamped ablation to achieve high drive
+efficiency.  Additional work has expended into the design of laser driven
+hydrodynamics experiments intended to test the physics of the ion driven
+X-target.
+
+My current research activities have focused on developing high power laser
+experiments on two high power laser systems: NIF (Livermore, CA) and Omega
+(Rochester, NY).  These experiments are intended to measure the material
+properties of metals under high pressure ($10^5 - 5 10^6$ times atmospheric
+pressure).  Specifically, I have helped design, specify, and analyze successful
+experiments over a broad range of conditions.  Experiments include:
+\begin{enumerate}
+	\item the measurements of the crystalline structure of thin (5 micron)
+		Tantalum foils while subjected to 300 kBar shocks
+	\item testing of a high energy (22 keV) silver x-ray backlighter intended for
+		radiography of Tantalum under high pressure (~5 MBar)
+	\item the measurement of the growth of Rayleigh-Taylor unstable
+		perturbations subject to a ramped pressure drive
+\end{enumerate}
 
 
 \subsection*{Ph.D. Research}
