--- a/cv.tex
+++ b/cv.tex
@@ -76,10 +76,10 @@
 	{\huge\scshape \name}
 
 	\textit{%
-		2223 Bonar St. Apt E $\bullet$
-		Berkeley, CA 94702 $\bullet$
+		1612 Parker St. Apt D $\bullet$
+		Berkeley, CA 94703 $\bullet$
 		608.658.4316 $\bullet$
-		\href{mailto:matt.terry@gmail.com}{matt.terry@gmail.com}
+		\href{mailto:matt.terry@gmail.com}{me@mattterry.net}
 	}
 \end{center}
 
