--- a/cv.tex
+++ b/cv.tex
@@ -83,10 +83,10 @@
 	}
 \end{center}
 
-%\section*{Objective}
-%\hrule
-%\vspace{0.05in}
-%I am seeking a position involving the application of computational tools in the analysis and solution of scientific or technical problems.
+\section*{Objective}
+\hrule
+\vspace{0.05in}
+I am seeking a position involving the application of computational tools in the analysis and solution of scientific and technical problems.
 
 \section*{Personal Information}
 \hrule
