pretentious Ph.D. suffix on name

--- a/cv.tex
+++ b/cv.tex
@@ -23,7 +23,7 @@
 \usepackage[resetlabels]{multibib}
 
 % Set your name here
-\def\name{Matthew R. Terry}
+\def\name{Matthew R. Terry, Ph.D.}
 
 % The following metadata will show up in the PDF properties
 \hypersetup{%
