fix email address

--- a/cv.tex
+++ b/cv.tex
@@ -79,7 +79,7 @@
 		1612 Parker St. Apt D $\bullet$
 		Berkeley, CA 94703 $\bullet$
 		608.658.4316 $\bullet$
-		\href{mailto:matt.terry@gmail.com}{me@mattterry.net}
+		\href{mailto:me@mattterry.net}{me@mattterry.net}
 	}
 \end{center}
 
