add postdoc to education

--- a/cv.tex
+++ b/cv.tex
@@ -101,6 +101,11 @@ I am seeking a position involving the application of computational tools in the 
 \hrule
 \vspace{0.05in}
 \begin{itemize}
+	\item
+		\textbf{Lawrence Livermore National Laboratory} \\
+		Post-doctoral research \\
+		Fusion Energy Program \\
+		Advisors: L. John Perkins, John J. Barnard, Alex Friedman
 	\item 
 		\textbf{University of Wisconsin-Madison} \\
 		Ph.D. Nuclear Engineering \\
