word smithing post-doc ed

--- a/cv.tex
+++ b/cv.tex
@@ -175,32 +175,55 @@ I am seeking a position involving the application of computational tools in the 
 \vspace{0.05in}
 
 \subsection*{Post-Doctoral Research}
-My post-doctoral research has focused on the design of novel inertial
-confinement fusion targets and on designing high energy density physics
-experiments.  I developed a shock ignition target compatible with ``day one''
-hardware on the recently completed National Ignition Facility (NIF) in
-Livermore, CA.
+My post-doctoral research has focused on understanding the physics of objects
+subjected to extremely high power ($10^{14}$ W), high intensity ($10^{15}
+\text{W}/\text{cm}^2$) laser and particle beams.  My research in the field of
+high energy density physics has focused on two broad topics: design of inertial
+confinement fusion (ICF) targets and design and analysis of materials science
+experiments involving metals at high pressure ($100 - 5000$ kBar).
 
-I developed a direct drive heavy ion driven ignition target that makes use of a
-long range heavy ion deposition and tamped ablation to achieve high drive
-efficiency.  Additional work has expended into the design of laser driven
-hydrodynamics experiments intended to test the physics of the ion driven
-X-target.
+My fusion efforts have all occurred in the field of inertial confinement fusion
+(ICF), a potential means of energy production that uses micro-explosions to
+produce conditions with densities 100,000 times solid density and temperatures
+in excess of $10^8$ K.  With L. J. Perkins and S. Sepke of AX Division, I developed a shock
+ignition target compatible with ``day one'' hardware on the recently completed
+National Ignition Facility (NIF) in Livermore, CA\@.  The design includes an
+assessment of energetics, polar drive efficiency, hydrodynamic stability, and
+performance degradation due to experimental jitter and hot electrons.  This
+research resulted in the Physics of Plasmas paper ``Design of a DT-Ablator
+Shock Ignition Target for
+the National Ignition Facility.''
 
-My current research activities have focused on developing high power laser
-experiments on two high power laser systems: NIF (Livermore, CA) and Omega
-(Rochester, NY).  These experiments are intended to measure the material
-properties of metals under high pressure ($10^5 - 5 10^6$ times atmospheric
-pressure).  Specifically, I have helped design, specify, and analyze successful
-experiments over a broad range of conditions.  Experiments include:
-\begin{enumerate}
-	\item the measurements of the crystalline structure of thin (5 micron)
-		Tantalum foils while subjected to 300 kBar shocks
-	\item testing of a high energy (22 keV) silver x-ray backlighter intended for
-		radiography of Tantalum under high pressure (~5 MBar)
-	\item the measurement of the growth of Rayleigh-Taylor unstable
-		perturbations subject to a ramped pressure drive
-\end{enumerate}
+Working with the Heavy Ion Fusion Virtual National Laboratory and LLNL's Fusion
+Energy Program, I developed heavy ion driven ICF concept. It uses directly
+incident ion beams on a spherical target to drive an ICF implosion.  This
+design makes use of the deep, spatially peaked deposition of heavy ion beams
+combined with the tamping effect of the material upstream.  For the
+acceleration
+stage, the drive transitions to radiation driven ablation, with the tamper
+material now acting as a spherical hohlraum.  A paper describing the design,
+including an assessment of the hydrodynamic stability, is in preparation.  
+
+In conjunction with my target design work, I have developed an automated shock
+tuner for ICF implosion simulation.  A ICF target design requires launching a
+sequence of shocks such that they merge within a limited time/space window.
+Tuning the shock launch times is tedious and time consuming.  To assist my
+target design work, developed optimization techniques that enable the
+unsupervised tuning of these parameters.  Tuning work that used to occupy days
+of attention can be completely automated and completed in hours.
+
+Over the past 6 months, I have worked with the LLNL B-Division Low Temperature
+Material Strength group on designing and fielding a broad range of experiments on the National
+Ignition Facility (NIF), and Omega (Rochester, NY).
+These include:
+\begin{itemize}
+	\item development of a bright 22 keV photon source (High Energy BackLighter
+		``HEBL'') to be used for radiography in NIF material strength experiments
+		of tantalum
+	\item experiments on Omega using Laue diffraction to measure of the
+		crystalline structure of thin (5 micron) tantalum foils subjected
+		to 300 kBar shocks
+\end{itemize}
 
 
 \subsection*{Ph.D. Research}
