--- a/cv.tex
+++ b/cv.tex
@@ -276,9 +276,12 @@ once took a week, can now be accomplished in hours.
 	\item Summer 2002 -  Worked with Dmitri Ryutov on magnetic islands in SSPX
 \end{itemize}
 
-\subsection*{Professional Societies}
+\subsection*{Professional Societies and Affiliations}
 \begin{itemize}
 	\item The American Physical Society
+	\item Software Carpentry
+	\item The Hacker Within
+	\item Scientific Computing in Python Conference
 \end{itemize}
 
 \pagebreak
