--- a/cv.tex
+++ b/cv.tex
@@ -289,10 +289,10 @@ once took a week, can now be accomplished in hours.
 \section*{Technical Leadership}
 \hrule
 \vspace{0.05in}
-\subsection*{Propsal Writing}
+\subsection*{Grant and Propsal Writing}
 I am the LLNL Primary Investigator for a 3-year, \$6M proposal the US DoE
 Office of Science to.  The proposal seeks funding to  experimentally investigate
-the physics of shock reflection and the evolution of the Kelvin-Hemholtz
+the physics of shock reflection and the evolution of the Kelvin-Helmholtz
 instability in conditions relevant to an ion driven fusion energy target
 design.  If funded, I would be responsible for directing as \$1.1M in funds
 over three years and managing a group of senior research scientists.  The
