add software carpentry section

--- a/cv.tex
+++ b/cv.tex
@@ -306,19 +306,44 @@ responsible for reviewing and selecting talks from submitted proposals.
 Committee is also responsible for reviewing submitted papers submitted to the
 conference proceedings.
 
-\subsection*{The Hacker Within 2008-2011, Software Carpentry 2012-present}
+\subsection*{The Hacker Within}
 The Hacker Within (THW) is a student-led, skill sharing interest group for
 scientific software development.  It was founded in 2008 by two colleagues and
-myself.  We hold bi-weekly meetings and hold occasional ``boot camps,'' highly
-focused multi-day workshops.  Our most recent boot camp on the Python
-programming language (\url{http://python.hackerwithin.org}) had more than 70
-attendees from 20 departments and included more than 18 hours of instruction.
-In addition to organization, I was responsible for teaching the sessions
+myself.  THW holds regular meetings organized around discussion of software
+development.  I personally contributed talks on build systems (CMake), version
+control (Subversion, Mercurial), text editors (VIM), and many Python-related
+topics.
+
+\vspace{0.1in}
+
+THW also hosts occasional highly focused multi-day ``boot camp'' workshops. I
+helped organize and teach boot camps on Unix literacy, C++, and Python in 2008,
+2009, and 2010.  The Python boot camp, in particular, had more than 70 attendees
+from 20 departments and included more than 18 hours of instruction.  In
+addition to organization, I was responsible for teaching the sessions
 ``Modules, Scripts, Packages and Classes,''  ``Graphing with MatPlotLib,''
-``Extending python with C/C++ using SWIG,''  and ``Batteries Included - The
-Python Standard Library.''  The Hacker Within collaborates with
-\href{software-carpentry.org}{Software Carpentry} to teach THW-style workshops
-at universities and laboratories across the US and Europe.
+``Extending Python with C/C++ using SWIG,''  and ``Batteries Included - The
+Python Standard Library.''
+
+\subsection*{Software Carpentry}
+Software Carpentry seeks to make scientists more effective by teaching them
+basic computing skills.  They have adopted the THW-style boot camp teaching
+methodology and have, over the past two years, taught over 50 workshops in the
+US, Canada, and Europe.  I have assisted with several Software Carpentry
+workshops at UC-Berkeley and Lawrence Berkeley Laboratory.  I am currently
+participating in a Software Carpentry instructor training course covering the
+academic literature on effective software development practice and techniques
+for effective computing instruction.
+
+\subsection*{Engineering Problem Solving}
+At the University of Wisconsin-Madison, I was a Teaching Assistant for NE 271:
+Engineering Problem Solving.  This laboratory course covers the solution of engineering
+problems using commercially-available software tools (spreadsheets, symbolic
+manipulators, and equation solvers). The emphasis of the course is on nuclear
+engineering problems, including radioactive decay, nuclear cross sections,
+scattering, and criticality.  In this freshmen-level class, I was responsible
+for guiding the in-class exercises as well as real-time debugging of students'
+programming errors and computing misconceptions.
 
 \section*{Community Leadership}
 \hrule
