--- a/cv.tex
+++ b/cv.tex
@@ -13,6 +13,7 @@
 
 \usepackage{hyperref}
 \usepackage{geometry}
+\usepackage{amsmath}
 
 % Comment the following lines to use the default Computer Modern font
 % instead of the Palatino font provided by the mathpazo package.
