gogit --git-dir=/Users/terry10/doc/cv/.git hash-object -w --stdin > /var/folders/3w/9s51d3jn65l9y52ztt94pcxm0008gj/T/vzGAPFP/94

--- a/cv.tex
+++ b/cv.tex
@@ -259,7 +259,7 @@ In my own research, I have derived and implemented Fermi-degenerate extensions o
 Over the course of my research, I have developed a significant amount of
 scientific software.  I am a skilled Python developer, with 8 years of
 experience with NumPy, SciPy, Matplotlib, Cython, PyTables, etc.  I am
-proficient in Fortran, C, and C++ and have experience working in parallel
+proficient in Fortran, C, C++, and Go and have experience working in parallel
 environments.  I am a vim, git, and \LaTeX user and am at home with the
 command-line.
 
