--- a/cv.tex
+++ b/cv.tex
@@ -287,7 +287,7 @@ once took a week, can now be accomplished in hours.
 
 \pagebreak
 
-\section*{Technical Leadership}
+\section*{Technical Leadership and Teaching}
 \hrule
 \vspace{0.05in}
 \subsection*{Grant and Propsal Writing}
