--- a/cv.tex
+++ b/cv.tex
@@ -98,7 +98,7 @@ I am seeking a position involving the application of computational tools in the 
 \end{itemize}
 
 
-\section*{Education}
+\section*{Education and Training}
 \hrule
 \vspace{0.05in}
 \begin{itemize}
